# OpenScopeNWB

./: .gitignore  Contributions.md  README.md  create_input_JSON.py  cron.py  pull_request_template.md  setup.cfg
.github/workflows/: lint.yml  open-scope-actions.yml  pytest.yml
projectScripts/: create_input_JSON.py
projectScripts/decipheringVariability/: create_input_JSON.py  ece_phys_generation.py
samples/ephys_session_725254892_demo/: 725254892_388523_20180726.opto.pkl  reduce_demo_size.py
samples/ephys_session_746083955_demo_reduced/: reduce_demo_size.py  reduce_demo_size_by_neurons.py
scripts/: cron.py  dandi_ephys_uploads.py  dandi_test_upload.py  dandi_uploads.py  ecephys_nwb_eye_tracking.py  ecephys_nwb_generation.py  ecephys_nwb_templates.py  ecephys_nwb_trials.py  environment.yml  ephys_rename.py  generate_json.py  graph_sync.py  ophys_nwb_generation.py  ophys_nwb_raw.py  ophys_nwb_stim.py  ophys_rename.py  slum_long_ephys_job.py  slurm_ephys_job.py  slurm_job.py  slurm_ophys_job.py  slurm_raw_ophys_job.py
scripts/000253/: dandiset.yaml
scripts/bash/: dandi.sh  ece_job.sh  ecephys.sh  long_ecephys.sh  ophys.sh  raw_ophys.sh
src/: create_input_JSON.py  ecephys_nwb_generation.py
tests/: allen_testing.py  dandi_testing.py  gen_json_testing.py  outputs.py  postgres_testing.py  test.py  test_.py  test_allen.py  test_cuf.py  test_dandi.py  test_firebase.py  test_gen_json.py  test_hash.py  test_hash.py~HEAD  test_modules.py  test_parsing.py  test_postgres.py  test_script_func.py
utils/: cleanUpNanAndInf.py  parseParameterJSON.py
(+91 files in other folders)
