[metadata]
name = OpenScopeNWB
version = 0.0.1

[options]
package_dir=
    =src
packages = find:
install_requires =
    argschema>=3.0.1
    numpy
    pandas

[options.extras_require]
TEST = 
    pytest
    pytest-cov

[options.packages.find]
where=src

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
