[metadata]
name = OpenScopeNWB
version = 0.0.1
license_files = LICENSE

[options]
package_dir=
    =src
packages = find:
install_requires =
    numpy
    pandas

[options.extras_require]
TEST =
    pytest
    psycopg2
    requests
    firebase_admin
    
[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = tests
